fix stretched profile images

--- a/src/styles/components/navbar/user_menu.module.sass
+++ b/src/styles/components/navbar/user_menu.module.sass
@@ -38,6 +38,7 @@
 
         .avatar-img
           border-radius: 50%
+          object-fit: cover
 
         h2
           font-size: 1rem
